# zero2prod

./: Cargo.toml
scripts/: init_db.sh
src/: lib.rs
tests/: health_check.rs
