[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path="src/lib.rs"
#Notice the doule square brackets: it's an arry in TOML sytax
# We can only have one library in a project but many binaries
#If you want to manage multiple libraries in the same repo
#use the workspace feature

[[bin]]
path="src/main.rs"
name = "zero2prod"


[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde={version = "1", features = ["derive"]}
[dev-dependencies]
reqwest = "0.12"

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[target.x86_64-pc-windows-gnu]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]
